# howto-generics

./: .gitignore  flake.nix  howto-generics.cabal  scripts.nix
src/Data/: Bifunctor.hs  Functor.hs  Trifunctor.hs
src/Data/Functor/: Barbie.hs
