cabal-version: 2.2

name:           howto-generics
version:        0.0.0.0
-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:     Simple

-- source-repository head
--   type: git
--   location: $gitrepo

--------------------------------------------------------------------------------

library
  default-extensions:
      ConstraintKinds
    , DataKinds
    , DefaultSignatures
    , DeriveAnyClass
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DeriveGeneric
    , DerivingStrategies
    , DerivingVia
    , EmptyCase
    , ExplicitForAll
    , FlexibleContexts
    , FlexibleInstances
    , GADTSyntax
    , InstanceSigs
    , KindSignatures
    , LambdaCase
    , MultiParamTypeClasses
    , Rank2Types
    , ScopedTypeVariables
    , StandaloneDeriving
    , TypeApplications
    , TypeOperators
    , UndecidableInstances
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base

  default-language: Haskell2010
  import: common-opts
  exposed-modules:
      Data.Functor
      Data.Functor.Barbie
      Data.Bifunctor
      Data.Trifunctor
  hs-source-dirs:
      src
